[tool.poetry]
name = "docker-events"
version = "0.1.0"
description = "Easily interact with Docker events"
authors = ["Kenji 'Nhqml' Gaillac"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
docker = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
